adding more assets

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
                 <div id="whatWillYouBeDoing" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img/background/workingatskyworkz.jpg" alt="Image description">
+                  <img class="img-fluid g-mb-30" src="assets/img/misc/workingatskyworkz.jpg" alt="Image description">
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
                       <div class="media g-parent g-mb-15">
@@ -440,7 +440,7 @@
                 </div>
 
                 <div id="roles" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
-                    <img class="img-fluid g-mb-30" src="assets/img/background/cloudengineer.jpg" alt="Image description">
+                    <img class="img-fluid g-mb-30" src="assets/img/misc/cloudengineer.jpg" alt="Image description">
 
                   <div class="row">
                     <div class="col-md-6 g-mb-20 g-mb-0--md">
@@ -544,7 +544,7 @@
                 </div>
 
                 <div id="ourOffer" class="tab-pane fade" role="tabpanel">
-                    <img class="img-fluid g-mb-30" src="assets/img/background/together.jpg" alt="Image description">
+                    <img class="img-fluid g-mb-30" src="assets/img/misc/together.jpg" alt="Image description">
                   <p class="g-line-height-1_4 mb-0"> • A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
                     <br>
                     <br>
@@ -602,7 +602,7 @@
           <!-- Team Block -->
           <div class="g-mx-minus-9--sm">
             <div class="js-carousel"
-                 data-slides-show="3"
+                 data-slides-show="5"
                  data-infinite="true"
                  data-arrows-classes="u-arrow-v1 g-pos-abs g-top-35x g-width-45 g-height-45 g-color-white g-theme-bg-blue-dark-v2 g-bg-primary--hover g-rounded-50x g-transition-0_2 g-transition--ease-in"
                  data-arrow-left-classes="fa fa-chevron-left g-left-0 g-ml-minus-15"
@@ -630,44 +630,7 @@
                 <!-- Figure -->
                 <figure class="text-center">
                   <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img1.jpg" alt="Image Description">
-                  <!-- End Figure Image -->
-
-                  <!-- Figure Info -->
-                  <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Director</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Martin Weidner</h2>
-                  </div>
-                  <!-- End Figure Info -->
-
-                  <!-- Figure Social Icons -->
-                  <ul class="list-inline mb-0">
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                    </li>
-                  </ul>
-                  <!-- End Figure Social Icons -->
-                </figure>
-                <!-- End Figure -->
-              </div>
-
-              <div class="js-slide g-px-5">
-                <!-- Figure -->
-                <figure class="text-center">
-                  <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img2.jpg" alt="Image Description">
+                  <img class="w-100 g-mb-35" src="assets/img/people/bas.jpeg" alt="Image Description">
                   <!-- End Figure Image -->
 
                   <!-- Figure Info -->
@@ -704,12 +667,49 @@
                 <!-- Figure -->
                 <figure class="text-center">
                   <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img3.jpg" alt="Image Description">
+                  <img class="w-100 g-mb-35" src="assets/img/people/Martin.jpeg" alt="Image Description">
                   <!-- End Figure Image -->
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Developer</h4>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Director</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Martin Weidner</h2>
+                  </div>
+                  <!-- End Figure Info -->
+
+                  <!-- Figure Social Icons -->
+                  <ul class="list-inline mb-0">
+                    <li class="list-inline-item g-mx-3">
+                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
+                        <i class="fa fa-twitter"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item g-mx-3">
+                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
+                        <i class="fa fa-facebook"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item g-mx-3">
+                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
+                    </li>
+                  </ul>
+                  <!-- End Figure Social Icons -->
+                </figure>
+                <!-- End Figure -->
+              </div>
+
+              <div class="js-slide g-px-5">
+                <!-- Figure -->
+                <figure class="text-center">
+                  <!-- Figure Image -->
+                  <img class="w-100 g-mb-35" src="assets/img/people/sven.JPG" alt="Image Description">
+                  <!-- End Figure Image -->
+
+                  <!-- Figure Info -->
+                  <div class="text-uppercase g-mb-20">
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Native Developer</h4>
                     <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Sven Rienstra</h2>
                   </div>
                   <!-- End Figure Info -->
@@ -741,7 +741,7 @@
                 <!-- Figure -->
                 <figure class="text-center">
                   <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img4.jpg" alt="Image Description">
+                  <img class="w-100 g-mb-35" src="assets/img/people/sander.jpeg" alt="Image Description">
                   <!-- End Figure Image -->
 
                   <!-- Figure Info -->
@@ -778,124 +778,13 @@
                 <!-- Figure -->
                 <figure class="text-center">
                   <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img5.jpg" alt="Image Description">
+                  <img class="w-100 g-mb-35" src="assets/img/people/lyle.jpg" alt="Image Description">
                   <!-- End Figure Image -->
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
                     <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Engineer</h4>
                     <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Lyle Henkeman</h2>
-                  </div>
-                  <!-- End Figure Info -->
-
-                  <!-- Figure Social Icons -->
-                  <ul class="list-inline mb-0">
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                    </li>
-                  </ul>
-                  <!-- End Figure Social Icons -->
-                </figure>
-                <!-- End Figure -->
-              </div>
-
-              <div class="js-slide g-px-5">
-                <!-- Figure -->
-                <figure class="text-center">
-                  <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img6.jpg" alt="Image Description">
-                  <!-- End Figure Image -->
-
-                  <!-- Figure Info -->
-                  <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Chief interior designer</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Salma Irek</h2>
-                  </div>
-                  <!-- End Figure Info -->
-
-                  <!-- Figure Social Icons -->
-                  <ul class="list-inline mb-0">
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                    </li>
-                  </ul>
-                  <!-- End Figure Social Icons -->
-                </figure>
-                <!-- End Figure -->
-              </div>
-
-              <div class="js-slide g-px-5">
-                <!-- Figure -->
-                <figure class="text-center">
-                  <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img7.jpg" alt="Image Description">
-                  <!-- End Figure Image -->
-
-                  <!-- Figure Info -->
-                  <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Chief engineer</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Carl Sanchez</h2>
-                  </div>
-                  <!-- End Figure Info -->
-
-                  <!-- Figure Social Icons -->
-                  <ul class="list-inline mb-0">
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item g-mx-3">
-                      <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="#!">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                    </li>
-                  </ul>
-                  <!-- End Figure Social Icons -->
-                </figure>
-                <!-- End Figure -->
-              </div>
-
-              <div class="js-slide g-px-5">
-                <!-- Figure -->
-                <figure class="text-center">
-                  <!-- Figure Image -->
-                  <img class="w-100 g-mb-35" src="assets/img-temp/600x605/img8.jpg" alt="Image Description">
-                  <!-- End Figure Image -->
-
-                  <!-- Figure Info -->
-                  <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Finance manager</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Julia Dolly</h2>
                   </div>
                   <!-- End Figure Info -->
 
