--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <nav class="navbar navbar-expand-lg p-0 g-px-15">
             <div class="container g-pos-rel">
               <a href="/" class="g-hidden-lg-up navbar-brand mr-0">
-                <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo-light.png" alt="Image Description"
+                <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo/Skyworkz.png" alt="Image Description"
                      data-header-fix-moment-exclude="d-block"
                      data-header-fix-moment-classes="d-none">
 
@@ -71,7 +71,7 @@
                   <li class="g-hidden-lg-down nav-logo-item g-mx-15--lg">
                     <a href="/" class="js-go-to navbar-brand mr-0"
                        data-type="static">
-                      <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo-light.png" alt="Image Description"
+                      <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo/Skyworkz.png" alt="Image Description"
                            data-header-fix-moment-exclude="d-block"
                            data-header-fix-moment-classes="d-none">
 
@@ -905,7 +905,7 @@
 
         <div class="text-center g-color-gray-dark-v5 g-theme-bg-blue-dark-v1 g-py-70">
           <a class="d-block g-width-140 mx-auto g-mb-30" href="/">
-            <img class="img-fluid" src="assets/img/logo-light.png" alt="Image description">
+            <img class="img-fluid" src="assets/img/logo/Skyworkz.png" alt="Image description">
           </a>
 
           <ul class="list-inline d-inline-block mb-0">
