--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 			<div class="notfound-404">
 				<h1>4<span>0</span>4</h1>
 			</div>
-			<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
+			<p>Hold tight! We're developing our super awesome website and will be ready shortly..</p>
 			<a href="#">home page</a>
 		</div>
 	</div>
