--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>Cloud development | Skyworkz</title>
+    <title>Skyworkz</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../favicon.ico">
+    <link rel="shortcut icon" href="assets/img/logo/Skyworkz_logo.ico">
 
     <!-- Google Fonts -->
     <link href="//fonts.googleapis.com/css?family=Open=Sans:300,400,600,700,800|Roboto:300,400,500,700,900" rel="stylesheet">
@@ -48,7 +48,7 @@
                      data-header-fix-moment-exclude="d-block"
                      data-header-fix-moment-classes="d-none">
 
-                <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo-dark.png" alt="Image Description"
+                <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo/Skyworkz.png" alt="Image Description"
                      data-header-fix-moment-exclude="d-none"
                      data-header-fix-moment-classes="d-block">
               </a>
