fixing header logo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                            data-header-fix-moment-exclude="d-block"
                            data-header-fix-moment-classes="d-none">
 
-                      <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo-dark.png" alt="Image Description"
+                      <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo/Skyworkz.png" alt="Image Description"
                            data-header-fix-moment-exclude="d-none"
                            data-header-fix-moment-classes="d-block">
                     </a>
