--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
                 <div id="whatWillYouBeDoing" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img/misc/workingatskyworkz.jpg" alt="Image description">
+                  <img class="img-fluid g-mb-30" src="assets/img/misc/werkspoor.jpeg" alt="Image description">
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
                       <div class="media g-parent g-mb-15">
