martin fixing texts and image added

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <section id="services" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary">
-            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">What do we offer to our clients?</h3>
+            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">What do we offer?</h3>
             <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">Services</h2>
           </div>
         </div>
@@ -384,7 +384,7 @@
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
                 <div id="whatWillYouBeDoing" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img/misc/workingatskyworkz.jpg" alt="Image description">
+                  <img class="img-fluid g-mb-30" src="assets/img/misc/workplace.jpeg" alt="Image description">
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
                       <div class="media g-parent g-mb-15">
@@ -415,10 +415,13 @@
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">It becomes interesting when they really want to take advantage of the cloud (“Why don’t I let Amazon manage my database?”). Skyworkz developers and engineers help teams to transform their software architecture, while Skyworkz engineers code the infrastructure and set-up all the necessary DevOps cloud instruments, probably also as part of a team.
+                      <p class="g-line-height-1_4 mb-0">It becomes interesting for us when our clients really want to take advantage of the cloud.
                         <br>
                         <br>
-                      Skyworkerz both know how to explain cloud advantages to business stakeholders and how to motivate teams to transform into DevOps teams in the cloud. </p>
+                        Skyworkz developers and engineers help teams to transform their software architecture, while Skyworkz engineers code the infrastructure and set-up all the necessary DevOps cloud instruments, probably also as part of a team.
+                        <br>
+                        <br>
+                        Skyworkers both know how to explain cloud advantages to business stakeholders and how to motivate teams to transform into DevOps teams in the cloud. </p>
                     </div>
 
                     <div class="col-md-4">
@@ -434,7 +437,11 @@
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">But what we really are about are Clients that have incorporated the cloud into their engineering culture. This is the environment in which we thrive. And work long term in DevOps teams. As cloud native developers we code and maintain applications DevOps style, as cloud native engineers we code and maintain the infrastructure and teams DevOps style.</p>
+                      <p class="g-line-height-1_4 mb-0">What we really are about are Clients that have incorporated the cloud into their engineering culture.
+                        <br>
+                          <br>
+                      This is the environment in which we thrive. And work long term in DevOps teams. As cloud native developers we code and maintain modern business applications that use everything the cloud has to offer, as cloud native engineers we code and maintain the infrastructure and teams DevOps style.</p>
+
                     </div>
                   </div>
                 </div>
