cleanup old img and fix paths

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                   <div class="media-body align-self-center">
                     <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white">What's up there in the cloud</h3>
-                    <p class="g-color-white-opacity-0_5 mb-0">The cloud offers a lot of promising technical benefits such as virtually limitless computing power, scalability, and continuous availability</p> 
+                    <p class="g-color-white-opacity-0_5 mb-0">The cloud offers a lot of promising technical benefits such as virtually limitless computing power, scalability, and continuous availability</p>
                     <p class="g-color-white-opacity-0_5 mb-0">At Skyworkz we understand that operational benefits are great – but they are nothing compared to the business benefits a company can gain in the cloud and that’s the focus of Skywork's.  We use the cloud to increase productivity, decrease time to market, and increase business flexibility</p>
                   </div>
                 </article>
@@ -384,7 +384,7 @@
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
                 <div id="whatWillYouBeDoing" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img/misc/werkspoor.jpeg" alt="Image description">
+                  <img class="img-fluid g-mb-30" src="assets/img/misc/werkspoor2.png" alt="Image description">
 
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
